# genealogy-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2025-01-17-semantic-kernel-autogen-design.md  2026-01-16-smart-search-router-design.md  2026-01-17-agentic-ai-architecture-design.md
src/genealogy_assistant/: __init__.py  cli.py  web.py
src/genealogy_assistant/adapters/: __init__.py
src/genealogy_assistant/adapters/gramps_plugin/: __init__.py  smart_search.gpr.py  smart_search.py
src/genealogy_assistant/adapters/gramps_web/: __init__.py  api.py
src/genealogy_assistant/agents/: __init__.py  config.py  llm_config.py  prompts.py
src/genealogy_assistant/api/: __init__.py  assistant.py
src/genealogy_assistant/core/: __init__.py  gedcom.py  gps.py  models.py
src/genealogy_assistant/data/: sources.yaml
src/genealogy_assistant/gramps/: __init__.py  client.py  web_api.py
src/genealogy_assistant/kernel/: __init__.py  setup.py
src/genealogy_assistant/plugins/: __init__.py
src/genealogy_assistant/plugins/gedcom/: __init__.py  gedcom_plugin.py
src/genealogy_assistant/plugins/gps/: __init__.py  validation_plugin.py
src/genealogy_assistant/plugins/memory/: __init__.py  research_memory_plugin.py
src/genealogy_assistant/plugins/reports/: __init__.py  citations_plugin.py  proof_summary_plugin.py
src/genealogy_assistant/plugins/search/: __init__.py  unified_search_plugin.py
src/genealogy_assistant/reports/: __init__.py  citations.py  family_group.py  pedigree.py  proof.py  research_log.py
src/genealogy_assistant/router/: __init__.py  registry.py  smart_router.py
src/genealogy_assistant/search/: __init__.py  base.py  belgian_archives.py  familysearch.py  findagrave.py  geneanet.py  unified.py
tests/: __init__.py  conftest.py  test_api_smart_search.py  test_assistant.py  test_gedcom.py  test_gps.py  test_models.py  test_reports.py  test_router_registry.py  test_router_smart_router.py
