[project]
name = "genealogy-assistant"
version = "0.1.0"
description = "AI-powered genealogy research assistant with Gramps integration following BCG/GPS standards"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Thomas Vincent" }
]
keywords = ["genealogy", "gramps", "gedcom", "family-history", "ai-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Sociology :: Genealogy",
]

dependencies = [
    "gramps>=5.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "aiosqlite>=0.19.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "anthropic>=0.40.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
web = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
genai = "genealogy_assistant.cli:app"

[project.urls]
Homepage = "https://github.com/thomasvincent/genealogy-assistant"
Documentation = "https://github.com/thomasvincent/genealogy-assistant#readme"
Repository = "https://github.com/thomasvincent/genealogy-assistant"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genealogy_assistant"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["genealogy_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
